fix: switch to Supabase Transaction Mode (port 6543) to fix MaxClientsInSessionMode error

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Database Configuration
+# For Supabase: Use the POOLER connection string with port 6543 (Transaction Mode)
+# Example: aws-0-us-east-1.pooler.supabase.com
 DATABASE_HOST=localhost
-DATABASE_PORT=5432
+DATABASE_PORT=6543
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=your_password
-DATABASE_NAME=tradingpro
+DATABASE_NAME=postgres
 
 # MT5 API Configuration
 MT5_API_BASE_URL=https://mt5.mtapi.io
