--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
-# Database Configuration
-# For Supabase: Use the POOLER connection string with port 6543 (Transaction Mode)
-# Example: aws-0-us-east-1.pooler.supabase.com
-DATABASE_HOST=localhost
-DATABASE_PORT=6543
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=your_password
-DATABASE_NAME=postgres
+# MongoDB Configuration
+# For MongoDB Atlas: Use the full connection string
+# Example: mongodb+srv://username:password@cluster.mongodb.net/tradingpro
+MONGODB_URI=mongodb://localhost:27017/tradingpro
 
 # MT5 API Configuration
 MT5_API_BASE_URL=https://mt5.mtapi.io
