--- a/package.json
+++ b/package.json
@@ -28,19 +28,18 @@
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
+    "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^10.4.22",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
-    "@nestjs/typeorm": "^10.0.1",
     "axios": "^1.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^5.2.1",
+    "mongoose": "^9.1.5",
     "openai": "^4.24.1",
-    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.19"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
