Fix counter trend issue, implement mt5 send closed trades to db and sync data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - API_AUTH_TOKEN=${API_AUTH_TOKEN}
       - EA_SYNC_SECRET=${EA_SYNC_SECRET}
       - TRADING_MAX_POSITIONS=${TRADING_MAX_POSITIONS}
+      - SCALPING_REQUIRE_HTF_CONFIRMATION=${SCALPING_REQUIRE_HTF_CONFIRMATION}
       - EA_BRIDGE_ENABLED=true
       - AUTO_TRADING_ENABLED=true
     ports:
