implement high impact news filter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,32 @@ services:
       - EA_SYNC_SECRET=${EA_SYNC_SECRET}
       - TRADING_MAX_POSITIONS=${TRADING_MAX_POSITIONS}
       - SCALPING_REQUIRE_HTF_CONFIRMATION=${SCALPING_REQUIRE_HTF_CONFIRMATION}
+      - NEWS_ENABLED=${NEWS_ENABLED}
+      - NEWS_PROVIDER=${NEWS_PROVIDER}
+      - NEWS_FF_URL=${NEWS_FF_URL}
+      - NEWS_TIMEZONE_OFFSET_HOURS=${NEWS_TIMEZONE_OFFSET_HOURS}
+      - NEWS_TE_API_KEY=${NEWS_TE_API_KEY}
+      - NEWS_TE_BASE_URL=${NEWS_TE_BASE_URL}
+      - NEWS_COUNTRIES=${NEWS_COUNTRIES}
+      - NEWS_IMPORTANCE=${NEWS_IMPORTANCE}
+      - NEWS_LOOKAHEAD_HOURS=${NEWS_LOOKAHEAD_HOURS}
+      - NEWS_CACHE_TTL_SECONDS=${NEWS_CACHE_TTL_SECONDS}
+      - NEWS_REQUEST_TIMEOUT_MS=${NEWS_REQUEST_TIMEOUT_MS}
+      - NEWS_PRE_MINUTES=${NEWS_PRE_MINUTES}
+      - NEWS_POST_MINUTES=${NEWS_POST_MINUTES}
+      - NEWS_TRADE_MODE=${NEWS_TRADE_MODE}
+      - NEWS_MIN_CONFIDENCE=${NEWS_MIN_CONFIDENCE}
+      - NEWS_MIN_RR=${NEWS_MIN_RR}
+      - NEWS_SYMBOLS=${NEWS_SYMBOLS}
+      - SENTIMENT_ENABLED=${SENTIMENT_ENABLED}
+      - SENTIMENT_PROVIDER=${SENTIMENT_PROVIDER}
+      - SENTIMENT_CFTC_URL=${SENTIMENT_CFTC_URL}
+      - SENTIMENT_CFTC_MARKET_NAME=${SENTIMENT_CFTC_MARKET_NAME}
+      - SENTIMENT_SYMBOL_MAP=${SENTIMENT_SYMBOL_MAP}
+      - SENTIMENT_CACHE_TTL_SECONDS=${SENTIMENT_CACHE_TTL_SECONDS}
+      - SENTIMENT_REQUEST_TIMEOUT_MS=${SENTIMENT_REQUEST_TIMEOUT_MS}
+      - SENTIMENT_NET_PCT_BULL=${SENTIMENT_NET_PCT_BULL}
+      - SENTIMENT_NET_PCT_BEAR=${SENTIMENT_NET_PCT_BEAR}
       - EA_BRIDGE_ENABLED=true
       - AUTO_TRADING_ENABLED=true
     ports:
