aggressive on high impact news

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,10 @@ services:
       - NEWS_TRADE_MODE=${NEWS_TRADE_MODE}
       - NEWS_MIN_CONFIDENCE=${NEWS_MIN_CONFIDENCE}
       - NEWS_MIN_RR=${NEWS_MIN_RR}
+      - NEWS_AGG_MULTIPLIER=${NEWS_AGG_MULTIPLIER}
+      - NEWS_AGG_MIN_CONFIDENCE=${NEWS_AGG_MIN_CONFIDENCE}
+      - NEWS_AGG_MIN_RR=${NEWS_AGG_MIN_RR}
+      - NEWS_BREAKOUT_LOOKBACK=${NEWS_BREAKOUT_LOOKBACK}
       - NEWS_SYMBOLS=${NEWS_SYMBOLS}
       - SENTIMENT_ENABLED=${SENTIMENT_ENABLED}
       - SENTIMENT_PROVIDER=${SENTIMENT_PROVIDER}
